added working directory to ~/app in @config.yml file

--- a/.circleci/src/@config.yml
+++ b/.circleci/src/@config.yml
@@ -12,6 +12,7 @@ executors:
     docker:
       # pullin my image from dockerhub
       - image: arsalanshaikh13/parallaxturtlelibcircle:v1
+    working_directory: ~/app
 
 anchors:
   tag_filter: &tag_filter
