--- a/.circleci/src/jobs/02_lint_and_test.yml
+++ b/.circleci/src/jobs/02_lint_and_test.yml
@@ -3,6 +3,7 @@ lint_and_test:
   steps:
     - checkout
     - attach_workspace:
-        at: .
+        at: ~/app
+    - run: pwd
     - run: yarn lint
     - run: yarn test
