--- a/.circleci/src/jobs/03_build.yml
+++ b/.circleci/src/jobs/03_build.yml
@@ -3,7 +3,7 @@ build:
   steps:
     - checkout
     - attach_workspace:
-        at: .
+        at: ~/app
     - run: yarn build
     - persist_to_workspace:
         root: .
