--- a/.circleci/src/jobs/04_publish.yml
+++ b/.circleci/src/jobs/04_publish.yml
@@ -3,7 +3,7 @@ publish:
   steps:
     - checkout
     - attach_workspace:
-        at: .
+        at: ~/app
     - run:
         name: Authenticate with npm
         command: |
