changed /app to ~/app

--- a/.circleci/src/jobs/02_lint_and_test.yml
+++ b/.circleci/src/jobs/02_lint_and_test.yml
@@ -3,7 +3,7 @@ lint_and_test:
   steps:
     - checkout
     - attach_workspace:
-        at: /app
+        at: ~/app
     - run: pwd
     - run: ls node_modules | grep eslint
     - run: yarn lint
