--- a/.circleci/src/jobs/02_lint_and_test.yml
+++ b/.circleci/src/jobs/02_lint_and_test.yml
@@ -1,6 +1,10 @@
 lint_and_test:
   executor: node_executor
   steps:
+    - run: |
+        pwd
+        ls -lhra
+        ls node_modules | grep eslint
     - checkout
     - attach_workspace:
         at: ~/app
