--- a/.circleci/src/jobs/03_build.yml
+++ b/.circleci/src/jobs/03_build.yml
@@ -1,9 +1,9 @@
 build:
   executor: node_executor
   steps:
-    # - checkout
-    # - attach_workspace:
-    #     at: ~/app
+    - checkout
+    - attach_workspace:
+        at: .
     - run: yarn build
     - persist_to_workspace:
         root: /app
