--- a/.circleci/src/@config.yml
+++ b/.circleci/src/@config.yml
@@ -14,6 +14,9 @@ executors:
       # - image: arsalanshaikh13/parallaxturtlelibcircle:v2
       # working_directory: /app
       - image: node:18-alpine
+  docker_executor:
+    docker:
+      - image: docker:20.10-git
 
 anchors:
   tag_filter: &tag_filter
