removed /app and replace with . in persist_to_workspace in build job

--- a/.circleci/src/jobs/03_build.yml
+++ b/.circleci/src/jobs/03_build.yml
@@ -6,6 +6,6 @@ build:
         at: .
     - run: yarn build
     - persist_to_workspace:
-        root: /app
+        root: .
         paths:
           - dist
