--- a/.circleci/src/jobs/05_docker_project.yml
+++ b/.circleci/src/jobs/05_docker_project.yml
@@ -7,6 +7,7 @@ docker_project:
         name: git sparse-checkout clone
         command: |
           git clone --no-checkout --sparse --depth=1 "https://${GITHUB_USERNAME}:${GITHUB_PULL_TOKEN}@github.com/${GITHUB_USERNAME}/Parallax-Provider-Tutorial.git"
+          cd Parallax-Provider-Tutorial
           git sparse-checkout set --no-cone "project/*"
           git checkout HEAD
     - setup_remote_docker: # gives you a remote Docker engine
