--- a/.circleci/src/workflows/workflow.yml
+++ b/.circleci/src/workflows/workflow.yml
@@ -2,22 +2,22 @@ version: 2.1
 build_and_release:
   when: << pipeline.parameters.run-build-and-release >>
   jobs:
-    # - install:
-    #     filters:
-    #       <<: *branch_filter
-    #       <<: *tag_filter
-    # - lint_and_test:
-    #     requires:
-    #       - install
-    #     filters:
-    #       <<: *branch_filter
-    #       <<: *tag_filter
-    # - build:
-    #     requires:
-    #       - lint_and_test
-    #     filters:
-    #       <<: *branch_filter
-    #       <<: *tag_filter
+    - install:
+        filters:
+          <<: *branch_filter
+          <<: *tag_filter
+    - lint_and_test:
+        requires:
+          - install
+        filters:
+          <<: *branch_filter
+          <<: *tag_filter
+    - build:
+        requires:
+          - lint_and_test
+        filters:
+          <<: *branch_filter
+          <<: *tag_filter
     # - publish:
     #     requires:
     #       - build
@@ -26,9 +26,10 @@ build_and_release:
     #         ignore: /.*/ # Ignore all branches
     #       <<: *tag_filter
     - docker_project:
-        # requires:
-        #   - build
+        requires:
+          - build
         filters:
-          <<: *branch_filter
+          branches:
+            ignore: /.*/ # Ignore all branches
           <<: *tag_filter
           
