--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
       - generate-config:
           filters:
             tags:
-              only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
+              only: /^v\d+\.\d+\.\d+-circleci-docker\.\d+$/
       - path-filtering/filter:
           requires:
             - generate-config
@@ -42,7 +42,7 @@ workflows:
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
 
-          base-revision: circleci
+          base-revision: circleci-docker
           # this is the path to the second configuration file to run
           config-path: .circleci/config_continued.yml
           # Define the mapping of regex patterns to pipeline parameters
@@ -54,7 +54,7 @@ workflows:
           # filters is only required for tag push
           filters:
             tags:
-              only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
+              only: /^v\d+\.\d+\.\d+-circleci-docker\.\d+$/
           workspace_path: .
           # https://circleci.com/developer/orbs/orb/circleci/path-filtering
           # checkout: false
